net: mockup requester should be initialized/finalized once

The mockup requester is shared among all GrlNet instances. So it should be
initialized just once, and finalized also once, when no instance require it.

https://bugzilla.gnome.org/show_bug.cgi?id=709651